# Redteam-Tools

./: README.md
TrustedInstaller/: Cargo.toml
TrustedInstaller/src/: functions.rs  main.rs
